k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kvl-growthos
  namespace: kvl-growthos
spec:
  selector:
    app: kvl-growthos
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
